care/force-app/main/default/objects/Suggested_Partner__c/Suggested_Partner__c.object-meta.xml
<CustomObject>
    <description>The object should be directly related to the Action Plan Needs object and it will be used to show which companies our consultants are suggesting would be a good fit.</description>
    <label>Suggested Partner</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Suggested Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggested Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>