care/force-app/main/default/objects/Suggested_Partner__c/fields/Action_Plan_Need__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Need__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan Need</label>
    <referenceTo>Action_Plan_Needs__c</referenceTo>
    <relationshipLabel>Suggested Partners</relationshipLabel>
    <relationshipName>Suggested_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>