care/force-app/main/default/objects/Suggested_Partner__c/fields/Action_Plan_Need_Owner__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Need_Owner__c</fullName>
    <formula>Action_Plan_Need__r.Owner:User.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan Need Owner</label>
    <type>Text</type>
</CustomField>