care/force-app/main/default/objects/Suggested_Partner__c/fields/Final_Selection__c.field-meta.xml
<CustomField>
    <fullName>Final_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Selection</label>
    <type>Checkbox</type>
</CustomField>