care/force-app/main/default/objects/Suggested_Partner__c/fields/Senior_Care_Companies__c.field-meta.xml
<CustomField>
    <fullName>Senior_Care_Companies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Care Companies</label>
    <referenceTo>Senior_Care_Companies__c</referenceTo>
    <relationshipLabel>Suggested Partners</relationshipLabel>
    <relationshipName>Suggested_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>