care/force-app/main/default/objects/Suggested_Partner__c/listViews/All_Suggested_Partners.listView-meta.xml
<ListView>
    <fullName>All_Suggested_Partners</fullName>
    <columns>NAME</columns>
    <columns>Senior_Care_Companies__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Suggested Partners</label>
    <language>en_US</language>
    <sharedTo>
        <group>Senior_Care</group>
        <group>Share_Senior_Care</group>
        <role>SystemAdmin</role>
    </sharedTo>
</ListView>